[tool.poetry]
name = "Senior Project"
version = "2.0.0"
description = "Tool to calculate confidence interval"
authors = ["Qiubei Li <qli5025@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.4.1"
numpy = "^1.18.4"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
